--- a/src/app/searchPage/page.css
+++ b/src/app/searchPage/page.css
@@ -1,6 +1,6 @@
 .searchPage {
     background: url('../../../public/images/hero-image.png');
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
+    background-size: contain;
+    height: calc(100vh - 93px);
+    width: 100%;
 }
