Imagenes para el fondo de resolución móvil.

--- a/src/app/searchPage/page.css
+++ b/src/app/searchPage/page.css
@@ -25,7 +25,6 @@
     }
 
     .searchPage {
-        background-position: 40%;
-        background-size: cover;
+        background: none;
     }
 }
